--- a/src/resources/views/reservation_motorcycle.hbs
+++ b/src/resources/views/reservation_motorcycle.hbs
@@ -20,73 +20,21 @@
             </div>
 
             <form action="" method="post">
-                <div class="mt-4 mr-4 w-full max-w-sm p-4 bg-white border border-gray-200 shadow sm:p-8 dark:bg-gray-800 dark:border-gray-700">
+                <input type="text" hidden value="" name="motor" >
+                <div class="mr-4 w-full max-w-sm p-4 bg-white border border-gray-200 shadow sm:p-8 dark:bg-gray-800 dark:border-gray-700">
                     <h5 class="mb-4 text-xl font-medium text-gray-500 dark:text-gray-400">₫130.000 /Ngày</h5>
                     <div class="flex items-baseline text-gray-900 dark:text-white">
                         không bao gồm thuế và bảo hiểm
                     </div>
-                    <button class="ml-36 mt-3 text-white bg-yellow-400 hover:bg-yellow-400 focus:ring-4 focus:outline-none focus:ring-yellow-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-yellow-400 dark:hover:bg-yellow-400 dark:focus:ring-yellow-400">THUÊ XE</button>
-                </div>
-            </form>
-        </div>
-
-        <div class="my-5 flex w-full max-w-7xl bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700">
-            
-            <img class="p-8 object-contain h-48 w-80" src="/assets/img/cho-thue-xe-may-ha-noi.png" alt="product image" />
-            
-            <div class="px-5 pb-5">
-                <h2 class="py-2 text-3xl font-semibold tracking-tight text-gray-900 dark:text-white">Yamaha Sirius 110cc</h2>
-                
-                <div class="flex flex-col ">
-                    <p class="text-sm dark:text-white">Mũ bảo hiểm 1/2 đầu</p>
-                    <p class="text-sm dark:text-white">Áo mưa 1 lần</p>
-                    <p class="text-sm dark:text-white">Bảo hiểm xe máy</p>
-                    <p class="text-sm dark:text-white">Đăng ký xe photo</p>
-                    <p class="text-sm dark:text-white">Dịch vụ cứu hộ</p>
-
-                </div>
-                
-            </div>
-
-            <form action="" method="post">
-                <div class="mt-4 mr-4 w-full max-w-sm p-4 bg-white border border-gray-200 shadow sm:p-8 dark:bg-gray-800 dark:border-gray-700">
-                    <h5 class="mb-4 text-xl font-medium text-gray-500 dark:text-gray-400">₫130.000 /Ngày</h5>
                     <div class="flex items-baseline text-gray-900 dark:text-white">
                         không bao gồm thuế và bảo hiểm
                     </div>
-                    <button class="ml-36 mt-3 text-white bg-yellow-400 hover:bg-yellow-400 focus:ring-4 focus:outline-none focus:ring-yellow-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-yellow-400 dark:hover:bg-yellow-400 dark:focus:ring-yellow-400">THUÊ XE</button>
+                    <button class="mt-4 ml-36 text-white bg-yellow-400 hover:bg-yellow-400 focus:ring-4 focus:outline-none focus:ring-yellow-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-yellow-400 dark:hover:bg-yellow-400 dark:focus:ring-yellow-400">THUÊ XE</button>
                 </div>
             </form>
         </div>
 
-        <div class="my-5 flex w-full max-w-7xl bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700">
-            
-            <img class="p-8 object-contain h-48 w-80" src="/assets/img/cho-thue-xe-may-ha-noi.png" alt="product image" />
-            
-            <div class="px-5 pb-5">
-                <h2 class="py-2 text-3xl font-semibold tracking-tight text-gray-900 dark:text-white">Yamaha Sirius 110cc</h2>
-                
-                <div class="flex flex-col ">
-                    <p class="text-sm dark:text-white">Mũ bảo hiểm 1/2 đầu</p>
-                    <p class="text-sm dark:text-white">Áo mưa 1 lần</p>
-                    <p class="text-sm dark:text-white">Bảo hiểm xe máy</p>
-                    <p class="text-sm dark:text-white">Đăng ký xe photo</p>
-                    <p class="text-sm dark:text-white">Dịch vụ cứu hộ</p>
-
-                </div>
-                
-            </div>
-
-            <form action="" method="post">
-                <div class="mt-4 mr-4 w-full max-w-sm p-4 bg-white border border-gray-200 shadow sm:p-8 dark:bg-gray-800 dark:border-gray-700">
-                    <h5 class="mb-4 text-xl font-medium text-gray-500 dark:text-gray-400">₫130.000 /Ngày</h5>
-                    <div class="flex items-baseline text-gray-900 dark:text-white">
-                        không bao gồm thuế và bảo hiểm
-                    </div>
-                    <button class="ml-36 mt-3 text-white bg-yellow-400 hover:bg-yellow-400 focus:ring-4 focus:outline-none focus:ring-yellow-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-yellow-400 dark:hover:bg-yellow-400 dark:focus:ring-yellow-400">THUÊ XE</button>
-                </div>
-            </form>
-        </div>
+        
     </div>
 
     
