--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1257,6 +1257,16 @@ input:checked + .toggle-bg {
   margin-top: 1.5rem;
 }
 
+.mx-12 {
+  margin-left: 5.5rem;
+  margin-right: 5.5rem;
+}
+
+.my-12 {
+  margin-top: 5.5rem;
+  margin-bottom: 5.5rem;
+}
+
 .mt-auto {
   margin-top: auto;
 }
@@ -1343,6 +1353,10 @@ input:checked + .toggle-bg {
 
 .w-1\/2 {
   width: 50%;
+}
+
+.w-2\/3 {
+  width: 70%;
 }
 
 .w-10 {
