--- a/src/resources/views/reservation_motorcycle.hbs
+++ b/src/resources/views/reservation_motorcycle.hbs
@@ -20,7 +20,7 @@
                     
                 </div>
 
-                <form action="/reservation/accessory" method="post">
+                <form action="/reservation/motorcycles" method="post">
                     <input type="text" id="id" name="id" class="hidden" value="{{this._id}}">
                     <div class="mr-4 w-full max-w-sm p-4 bg-white border border-gray-200 shadow sm:p-8 dark:bg-gray-800 dark:border-gray-700">
                         <h5 class="mb-4 text-xl font-medium text-gray-500 dark:text-gray-400">₫{{this.price_per_day}}/Ngày</h5>
