--- a/src/resources/views/reservation_infos.hbs
+++ b/src/resources/views/reservation_infos.hbs
@@ -62,7 +62,7 @@
             <div class="h-80 mx-4 my-4 border">
                 <div class="mx-4 mt-8 ">
                     <p class="mt-3 text-xl font-bold">Tổng cộng</p>
-                    <p class="text-xl mt-1 text-right">₫200.000</p>
+                    <p class="text-xl mt-1 text-right">{{total}}</p>
                 </div>
             </div>
         </div>
