--- a/src/resources/views/user.hbs
+++ b/src/resources/views/user.hbs
@@ -2,26 +2,7 @@
 
     <div class="flex-1 flex">
         
-        <div class="p-2 bg-white w-60 flex-col hidden md:flex" id="sideNav">
-            <nav>
-                <a class="block text-gray-500 py-2.5 px-4 my-4 rounded transition duration-200 hover:bg-gradient-to-r hover:from-cyan-400 hover:to-cyan-300 hover:text-white" href="#">
-                    <i class="fas fa-home mr-2"></i>DashBoard
-                </a>
-                <a class="block text-gray-500 py-2.5 px-4 my-4 rounded transition duration-200 hover:bg-gradient-to-r hover:from-cyan-400 hover:to-cyan-300 hover:text-white" href="#">
-                    <i class="fas fa-users mr-2"></i>User
-                </a>
-                <a class="block text-gray-500 py-2.5 px-4 my-4 rounded transition duration-200 hover:bg-gradient-to-r hover:from-cyan-400 hover:to-cyan-300 hover:text-white" href="#">
-                    <i class="fa-solid fa-motorcycle mr-2"></i>Motor
-                </a>
-                <a class="block text-gray-500 py-2.5 px-4 my-4 rounded transition duration-200 hover:bg-gradient-to-r hover:from-cyan-400 hover:to-cyan-300 hover:text-white" href="#">
-                    <i class="fa-solid fa-map mr-2"></i>Location
-                </a>
-                <a class="block text-gray-500 py-2.5 px-4 my-4 rounded transition duration-200 hover:bg-gradient-to-r hover:from-cyan-400 hover:to-cyan-300 hover:text-white" href="#">
-                    <i class="fa-solid fa-clipboard mr-2"></i>Rental
-                </a>
-            </nav>
-
-        </div>
+        {{>sidebar}}
 
         <div class="flex-1 p-4">
             <div class="relative max-w-md w-full">
@@ -45,13 +26,15 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <tr class="hover:bg-grey-lighter">
-                                <td class="py-2 px-4 border-b border-grey-light"><img src="/assets/img/moto-icon.jpg" alt="Foto Perfil" class="rounded-full h-10 w-10"></td>
-                                <td class="py-2 px-4 border-b border-grey-light">meodaosi@gmail.com</td>
-                                <td class="py-2 px-4 border-b border-grey-light">Comercio</td>
-                                <td class="py-2 px-4 border-b border-grey-light">Comercio</td>
-                                <td class="py-2 px-4 border-b border-grey-light"><a href=""><i class="fa-solid fa-pen-to-square"></i></a></td>
-                            </tr>
+                            {{#each new_users}}
+                                <tr class="hover:bg-grey-lighter">
+                                    <td class="py-2 px-4 border-b border-grey-light"><img src="/assets/img/moto-icon.jpg" alt="Foto Perfil" class="rounded-full h-10 w-10"></td>
+                                    <td class="py-2 px-4 border-b border-grey-light">{{this.email}}</td>
+                                    <td class="py-2 px-4 border-b border-grey-light">{{this.status}}</td>
+                                    <td class="py-2 px-4 border-b border-grey-light">{{this._doc.date}}</td>
+                                    <td class="py-2 px-4 border-b border-grey-light"><a href=""><i class="fa-solid fa-pen-to-square"></i></a></td>
+                                </tr>
+                            {{/each}}
                         </tbody>
                     </table>
                     {{!-- <div class="text-right mt-4">
